assets/js/base/components/select/style.scss
.wc-block-select {
	height: 48px;
	position: relative;
	margin-bottom: $gap-large;

	label {
		@include font-size(16);
		position: absolute;
		transform: translateY(0.75em);
		transform-origin: top left;
		transition: all 200ms ease;
		line-height: 1.375;
		color: $gray-50;
		z-index: 1;
		margin: 0 $gap;
		overflow: hidden;
		text-overflow: ellipsis;
		max-width: calc(100% - #{  2 * $gap });
		white-space: nowrap;

		@media screen and (prefers-reduced-motion: reduce) {
			transition: none;
		}
	}

	&.is-active label {
		transform: translateY(#{$gap-smallest}) scale(0.75);
	}

	&.has-error {
		.components-custom-select-control__button {
			border-color: $error-red;
		}
	}

	&.has-error label {
		color: $error-red;
	}

	.components-custom-select-control__button {
		@include font-size(16);
		background-color: #fff;
		box-shadow: none;
		color: $input-text-active;
		font-family: inherit;
		font-weight: normal;
		height: 3em;
		letter-spacing: inherit;
		line-height: 1;
		overflow: hidden;
		padding: calc(1.25em + #{$gap-smallest}) $gap 0.25em; // With a font-size of 16px, this will be `24px 16px 4px`.
		text-overflow: ellipsis;
		text-transform: none;
		white-space: nowrap;
		width: 100%;

		&:hover,
		&:focus,
		&:active {
			background-color: #fff;
			text-decoration: none;
		}
	}

	.components-custom-select-control__button-icon {
		right: #{$gap - 4px};
	}

	.components-custom-select-control__menu {
		background-color: #fff;
		margin: 0;
		max-height: 300px;
		overflow: auto;

		// Required by IE11.
		&:empty {
			display: none;
		}
	}

	.components-custom-select-control__item {
		@include font-size(16);
		margin-left: 0;
		padding-left: $gap;
	}

	.components-custom-select-control__item-icon {
		display: none;
	}
}

